# DockMenu

./: .clang-format  .gitattributes  CMakeLists.txt  format_codes.sh  format_git.sh
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
src/: CMakeLists.txt
src/cmake/: eddockmenuConfig.cmake
src/ed/dockmenu/: DragPreview.cpp  DragPreview.h  MenuAreaWidget.cpp  MenuAreaWidget.h  MenuButton.cpp  MenuButton.h  MenuFloating.cpp  MenuFloating.h  MenuManager.cpp  MenuManager.h  MenuOverlay.cpp  MenuOverlay.h  MenuTabBar.cpp  MenuTabBar.h  MenuTitleBar.cpp  MenuTitleBar.h  MenuTitleBar_p.h  MenuWidget.cpp  MenuWidget.h  MouseTracker.cpp  MouseTracker.h  OverlayCenter.cpp  OverlayCenter.h  Provider.cpp  Provider.h  SlidingStacked.cpp  SlidingStacked.h  Splitter.cpp  Splitter.h  Tooltip.cpp  Tooltip.h  Triangle.cpp  Triangle.h  ed_menu_glabals.cpp  ed_menu_globals.h
src/resources/: dockmenu.qrc
src/resources/stylesheets/: default.css  default_linux.css  focus_highlighting.css  focus_highlighting_linux.css
